--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
         <!-- About Me -->
         <div id="about" class="container mt-3">
-            <h5 class="card-title">About Me</h5>
+            <h3 class="card-title text-center">About Me</h3>
             <div class="card" >
                 <div class="row">
                     <div class="card-body">
@@ -102,7 +102,7 @@
 
         <!-- Skills -->
         <div id="skills" class="container mt-3">
-            <h2>Skills</h2>
+            <h3 class="text-center">Skills</h3>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
@@ -156,7 +156,7 @@
 
         <!-- Projects -->
         <div id="projects" class="container mt-3">
-            <h2>Projects</h2>
+            <h3 class="text-center">Projects</h3>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
                     <div class="card h-100">
